# gaia-ops

./: .env.example  .eslintrc.json  .gitignore  .npmignore  AGENT_SESSION_IMPLEMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_2.6.2.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT_EXTENSIONS.md  CONTRIBUTING.md  GAIA_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  INSTALL.en.md  INSTALL.md  LICENSE  P0_IMPLEMENTATION_COMPLETE.md  PRE_PUBLISH_WORKFLOW.md  PUBLISH_AND_TEST.sh  QUICK_PUBLISH.sh  README.en.md  README.md  RELEASE_NOTES_2.6.1.md  REORGANIZATION_REPORT.md  SECURITY.md  SESSION_SUMMARY_2025-11-12.md  TEST_ABSOLUTE_PATHS.sh  TEST_PLAN.md  TEST_RESULTS_2.6.1.md  architecture-viewer.html  architecture.json  index.js  package-lock.json  package.json  pyproject.toml  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: README.en.md  README.md  _README.en.md  _README.md  aws-troubleshooter.md  claude-architect.md  cloud-troubleshooter.md  developer.md  devops-developer.md  gaia-operator.md  gaia-orchestrator.md  gaia-planner.md  gaia-system.md  gaia.md  gcp-troubleshooter.md  gitops-operator.md  speckit-planner.md  terraform-architect.md
commands/: README.en.md  README.md  architect.md  gaia-plan.md  gaia.md  restore-session.md  save-session.md  scan-project.md  session-status.md  speckit.add-task.md  speckit.analyze-task.md  speckit.implement.md  speckit.init.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
config/: AGENTS.md  README.en.md  README.md  agent-catalog.md  clarification_rules.json  (+19 more)
(+723 files in other folders)
