[project]
name = "gaia-ops"
version = "4.7.2"
description = "Multi-agent orchestration system for Claude Code - DevOps automation toolkit"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jorge Aguilar", email = "jaguilar1897@gmail.com"},
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
