[project]
name = "gaia"
version = "5.0.0-rc.2"
description = "Multi-agent orchestration system for Claude Code - DevOps automation toolkit"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jorge Aguilar", email = "jorge.aguilar87@gmail.com"},
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests", "tools/scan/tests"]
markers = [
    "parity: JS-Python CLI parity comparison tests",
]
